--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
